# c6502

./: .gitignore  CMakeLists.txt  HEADER.txt  Makefile  README.md
include/c6502/: cpu.h  instrs.h
scripts/: apply_license_headers.sh
src/c6502/: cpu.c  instrs.c
test/include/: cpu_tester.h  test_assert.h
test/include/cpu/: cpu_tester.h
test/res/: addition.asm  arithmetic.asm  branch.asm  interrupt.asm  logic.asm  stack.asm  status.asm  store_load.asm  subtraction.asm
test/src/: cpu_tester.c  testmain.c
test/src/cpu/: cpu_tester.c
test/src/cpu/tests/: test_addition.c  test_arithmetic.c  test_branch.c  test_interrupt.c  test_logic.c  test_stack.c  test_status.c  test_store_load.c  test_subtraction.c
test/src/tests/: test_addition.c  test_arithmetic.c  test_branch.c  test_interrupt.c  test_logic.c  test_stack.c  test_status.c  test_store_load.c  test_subtraction.c
